# dattrs

./: README.md  dattrs-config.py  dattrs-describe.py  pyproject.toml
examples/: dattrs-detect.py  dattrs-models.py  dattrs-test.py  dattrs-usecase.py
examples/config/: config.yaml  dattrs-config.py
examples/config/models/: taxis.yaml
examples/config/models/cdm/: taxis-cdm.yaml
examples/config/models/raw/: taxis-raw.yaml
src/dattrs/: __init__.py  _class.py  _convert.py  _validate.py  convert.py  converter.py  model.py  namespace.py  schema.py  testing.py  utils.py  validate.py  validator.py
src/dattrs/config/: __init__.py  config.py  metadata.py  models.py  runtime.py
src/dattrs/model/: __init__.py  describe.py  model.py
